force-app/main/default/objects/Report__c/Report__c.object-meta.xml
<CustomObject>
    <label>Report</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Report Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>