force-app/main/default/objects/Report__c/fields/Punch_In__c.field-meta.xml
<CustomField>
    <fullName>Punch_In__c</fullName>
    <label>Punch In</label>
    <required>true</required>
    <type>Time</type>
</CustomField>