force-app/main/default/objects/Report__c/fields/Punch_Out__c.field-meta.xml
<CustomField>
    <fullName>Punch_Out__c</fullName>
    <label>Punch Out</label>
    <type>Time</type>
</CustomField>