force-app/main/default/objects/Report__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Late</fullName>
            </value>
            <value>
                <fullName>On Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>