force-app/main/default/objects/Report__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>UserId</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Reports</relationshipLabel>
    <relationshipName>Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>